--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -14,9 +14,9 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the image
       run: |
-        docker build -t techtrends:latest .
+        docker build -t techtrends:latest ./project
     - name: Push the latest image to DockerHub
       run: |
         docker login -u kkurar -p ${{ secrets.DOCKERHUB_TOKEN }}
-        docker tag techtrends:latest kkurar/techtrends/:latest
+        docker tag techtrends:latest kkurar/techtrends:latest
         docker push kkurar/techtrends:latest
