--- a/.github/workflows/techtrends-dockerhub.yml
+++ b/.github/workflows/techtrends-dockerhub.yml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - 'main'
-    paths:
-      - "project/**"
+    # paths:
+    #   - "project/**"
 
 jobs:
   build:
