--- a/project/helm/values.yaml
+++ b/project/helm/values.yaml
@@ -8,7 +8,7 @@ service:
   type: ClusterIP
 
 image:
-  repository: techtrends
+  repository: kkurar/techtrends
   tag: latest
   pullPolicy: IfNotPresent
 
