--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -13,7 +13,7 @@ jobs:
     ## Configure the operating system the workflow should run on.
     ## In this case, the job on Ubuntu. Additionally, set a the job
     ## to execute on different Python versions 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         python-version: [2.7, 3.5, 3.6, 3.7, 3.8]
