Fix manifest and helm charts

--- a/project/helm/templates/service.yaml
+++ b/project/helm/templates/service.yaml
@@ -10,4 +10,6 @@ spec:
   - port: {{ .Values.service.port }}
     protocol: {{ .Values.service.protocol }}
     targetPort: {{ .Values.service.targetPort }}
+  selector:
+    app: techtrends
   type: {{ .Values.service.type }}
