--- a/project/argocd/helm-techtrends-prod.yaml
+++ b/project/argocd/helm-techtrends-prod.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: prod
 spec:
   destination:
-    namespace: default
+    namespace: prod
     server: https://kubernetes.default.svc
   project: default
   source:
