--- a/project/argocd/helm-techtrends-staging.yaml
+++ b/project/argocd/helm-techtrends-staging.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: staging
 spec:
   destination:
-    namespace: default
+    namespace: staging
     server: https://kubernetes.default.svc
   project: default
   source:
