--- a/project/helm/templates/deploy.yaml
+++ b/project/helm/templates/deploy.yaml
@@ -17,22 +17,22 @@ spec:
     spec:
       containers:
         - image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          imagePullPolicy: {{ .Value.image.pullPolicy }}
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
           name: techtrends
           ports:
           - containerPort: {{ .Values.containerPort }}
           livenessProbe:
             httpGet:
-              path: {{ .Values.resources.livenessProbe.path }}
+              path: {{ .Values.livenessProbe.path }}
               port: {{ .Values.containerPort }}
           readinessProbe:
             httpGet:
-              path: {{ .Values.resources.readinessProbe.path }}
+              path: {{ .Values.readinessProbe.path }}
               port: {{ .Values.containerPort }}
           resources:
             requests:
               cpu: {{ .Values.resources.requests.cpu }}
               memory: {{ .Values.resources.requests.memory }}
             limits:
-              cpu: {{ .Values.limits.requests.cpu }}
-              memory: {{ .Values.limits.requests.memory }}
+              cpu: {{ .Values.resources.limits.cpu }}
+              memory: {{ .Values.resources.limits.memory }}
